k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend

        image: us-central1-docker.pkg.dev/task-tracker-499005/task-tracker/task-api:v1

        ports:
        - containerPort: 8000
