k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend

        image: us-central1-docker.pkg.dev/task-tracker-499005/task-tracker/task-frontend:v3

        ports:
        - containerPort: 3000
