k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend

spec:
  type: LoadBalancer

  selector:
    app: backend

  ports:
  - port: 8000
    targetPort: 8000
