k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: taskmonitor-ingress

  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: taskmonitor-cert

spec:
  rules:
  - http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
